# datascience-project

./: goodness-of-fit.py
new-sounds/: .gitignore  .sample_dotenv  README.md  pyproject.toml
new-sounds/data/: all_songs_data.csv  genres.csv  unique_songs.csv  unique_songs_with_single_tags.csv  unique_songs_with_spotify_tags.csv
new-sounds/data/jan/01/: song_info.csv
new-sounds/data/jan/02/: song_info.csv
new-sounds/data/jan/03/: song_info.csv
new-sounds/data/jan/04/: song_info.csv
new-sounds/data/jan/05/: song_info.csv
new-sounds/data/jan/06/: song_info.csv
new-sounds/data/jan/07/: song_info.csv
new-sounds/data/jan/08/: song_info.csv
new-sounds/data/jan/09/: song_info.csv
new-sounds/data/jan/10/: song_info.csv
new-sounds/data/jan/11/: song_info.csv
new-sounds/data/jan/12/: song_info.csv
new-sounds/data/jan/13/: song_info.csv
new-sounds/data/jan/14/: song_info.csv
new-sounds/data/jan/15/: song_info.csv
new-sounds/data/jan/16/: song_info.csv
new-sounds/data/jan/17/: song_info.csv
new-sounds/data/jan/18/: song_info.csv
new-sounds/data/jan/19/: song_info.csv
new-sounds/data/jan/20/: song_info.csv
new-sounds/data/jan/21/: song_info.csv
new-sounds/data/jan/22/: song_info.csv
new-sounds/data/jan/23/: song_info.csv
new-sounds/data/jan/24/: song_info.csv
new-sounds/data/jan/25/: song_info.csv
new-sounds/data/jan/26/: song_info.csv
new-sounds/data/jan/27/: song_info.csv
new-sounds/data/jan/28/: song_info.csv
new-sounds/data/jan/29/: song_info.csv
new-sounds/scrapers/: lastfm_scraper.py  scraper.py  spotify_scraper.py
(+2 files in other folders)
